[tool.poetry]
name = "sphinxcontrib.nvd3"
version = "0.2.1"
description = "Sphinx chart extension using NVD3.js."
authors = ["shkumagai <take.this.2.your.grave@gmail.com>"]
homepage = "https://github.com/shkumagai/sphinxcontrib.nvd3"
license = "Apache Software License"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]
packages = [
    { include = "sphinxcontrib", from = "src" },
]
readme = "README.rst"
include = [
    "AUTHORS.rst",
    "CHANGES.rst",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = ">=4.0"
python-nvd3 = "^0.15.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.5"
black = "^23.1.0"
flake8 = "^5.0.4"
flake8-copyright = "^0.2.3"
flake8-return = "^1.2.0"
isort = "^5.8.0"
mypy = "^1.1"
tox = "^4.4.7"
twine = "^4.0.2"
wheel = "^0.38.4"

[tool.isort]
profile = "black"
src_paths = ["sphinxcontrib", "docs"]

[tool.black]
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
