[tool.poetry]
name = "sphinxcontrib.nvd3"
version = "0.2.1"
description = "Sphinx chart extension using NVD3.js."
authors = ["shkumagai <take.this.2.your.grave@gmail.com>"]
homepage = "https://github.com/shkumagai/sphinxcontrib.nvd3"
license = "Apache Software License"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]
packages = [
    { include = "sphinxcontrib", from = "src" },
]
readme = "README.rst"
include = [
    "AUTHORS.rst",
    "CHANGES.rst",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = ">=4.0"
python-nvd3 = ">=0.15,<0.17"

[tool.poetry.dev-dependencies]
tox = "^4.16.0"

[tool.isort]
profile = "black"
src_paths = ["sphinxcontrib", "docs"]

[tool.black]
target-version = ["py310"]

[tool.ruff]
target-version = "py310"

line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
